3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/button.c: Patch by Bernd Edler to have proper speed set for items 
  activated by buttons.
server/apply.c: Apply the 'special prayer' marker stuff, since it wasn't
  used anymore.
server/gods.c: Check for FLAG_EQUIP on spells and not for a special prayer
  marker to guess if a spell is a god given spell or not.
server/spell_util.c: Patch by Bernd Edler so that firewalls are immune
  to casting time.
MSW 2004-04-17

server/shop.c: Decrease adjustment limit for expensive items to 10000 to get a
   continuous adjustment function. That is you will get much less when selling
   items with a value between 800pp and 2000pp.
Andreas Kirschbaum 2004-04-16

common/map.c: Change blocked_link() to take a map parameter.  Also, change code
   in blocked_link() to assume that the caller has set up appropriate map and
   coordinates related to tiling (in all functions that currently call
   blocked_link, this is the case)
include/libproto.h: Rebuilt.
server/move.c, server/player.c: update call to blocked_link to include the map.
MSW 2004-04-15

common/object.c: Change CAN_MERGE() so that it compares the stats structure of
  the objects being merged.  Fixes problems of rings improperly merging with
  other rings that have different stat values.
server/monster.c: Modify check_earthwalls() and check_doors() to take a
  map structure as an option parameter, and use that structure when
  calling get_map_ob.  Fixes a crash in cases where earthwalls/doors
  were at the edge of a tiled map, and creature was on other map moving into
  it.
server/move.c: Change move_ob() to adjust coordinates for tiling, and